Add Debug sensors option to be able to more easily dump values of sensor (still require adb logcat -s PHH)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,8 @@
             android:theme="@android:style/Theme.Material.Dialog" >
         </activity>
 
+        <activity android:name=".DebugSensors" />
+
     </application>
 
 </manifest>
