Add support for HCT double tap to wake

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 
 dependencies {
     compileOnly fileTree(dir: 'libs', include: '*.jar')
+    implementation files('libs/vendor.hct.hardware.gesturewake-V1.0-java.jar')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.preference:preference-ktx:1.1.0'
 }
