Add support for Asus (zf8) DT2W
Add this into a a new "DT2W" option into Misc.
The idea will be to connect the other dt2w option (like Xiaomi, HCT,
...) all back to this one

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
     compileOnly fileTree(dir: 'libs', include: '*.jar')
     implementation files('libs/vendor.hct.hardware.gesturewake-V1.0-java.jar')
+    implementation files('libs/vendor.ims.zenmotion-V1.0-java.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.preference:preference-ktx:1.1.0'
